WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282756
[GStreamer][WebRTC] Latency improvements
https://bugs.webkit.org/show_bug.cgi?id=282756
Summary
[GStreamer][WebRTC] Latency improvements
Philippe Normand
Reported
2024-11-07 06:43:50 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-11-07 06:49:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36326
EWS
Comment 2
2024-11-08 00:49:46 PST
Committed
286323@main
(3539c8a950f6): <
https://commits.webkit.org/286323@main
> Reviewed commits have been landed. Closing PR #36326 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-08 00:50:14 PST
<
rdar://problem/139497628
>
Philippe Normand
Comment 4
2024-11-11 03:07:58 PST
This triggers ASSERTs, I'm checking it. STDERR: ASSERTION FAILED: isMainThread() STDERR: /app/webkit/Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.cpp(504) : WebCore::RealtimeMediaSource& WebCore::MediaStreamTrackPrivate::source() STDERR: Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache. STDERR: 1 0x7f11187693ec WebCore::MediaStreamTrackPrivate::source() STDERR: 2 0x7f11187e07e2 InternalSource::InternalSource(_GstElement*, WebCore::MediaStreamTrackPrivate&, WTF::String const&, bool)::{lambda(_GstPad*, _GstPadProbeInfo*, void*)#1}::operator()(_GstPad*, _GstPadProbeInfo*, void*) const STDERR: 3 0x7f11187e0c7a InternalSource::InternalSource(_GstElement*, WebCore::MediaStreamTrackPrivate&, WTF::String const&, bool)::{lambda(_GstPad*, _GstPadProbeInfo*, void*)#1}::_FUN(_GstPad*, _GstPadProbeInfo*, void*) STDERR: 4 0x7f10fbfebf2f probe_hook_marshal STDERR: 5 0x7f10ff2faa07 g_hook_list_marshal STDERR: 6 0x7f10fbfec5b8 do_probe_callbacks STDERR: 7 0x7f10fbfee217 gst_pad_query STDERR: 8 0x7f10fbff16b3 gst_pad_peer_query STDERR: 9 0x7f10fbfeb2f5 query_latency_default_fold.lto_priv.0 STDERR: 10 0x7f10fbfd7d75 gst_iterator_fold STDERR: 11 0x7f10fbfed06e gst_pad_query_default STDERR: 12 0x7f10fbfedebb gst_pad_query STDERR: 13 0x7f10fbff16b3 gst_pad_peer_query STDERR: 14 0x7f10fbfeb2f5 query_latency_default_fold.lto_priv.0 STDERR: 15 0x7f10fbfd7d75 gst_iterator_fold STDERR: 16 0x7f10fbfed06e gst_pad_query_default STDERR: 17 0x7f10fbfedebb gst_pad_query STDERR: 18 0x7f10fbff16b3 gst_pad_peer_query STDERR: 19 0x7f10fbfeb2f5 query_latency_default_fold.lto_priv.0 STDERR: 20 0x7f10fbfd7d75 gst_iterator_fold STDERR: 21 0x7f10fbfed06e gst_pad_query_default STDERR: 22 0x7f10fbfedebb gst_pad_query STDERR: 23 0x7f10fbff16b3 gst_pad_peer_query STDERR: 24 0x7f10fbfeb2f5 query_latency_default_fold.lto_priv.0 STDERR: 25 0x7f10fbfd7d75 gst_iterator_fold STDERR: 26 0x7f10fbfed06e gst_pad_query_default STDERR: 27 0x7f10fbfedebb gst_pad_query STDERR: 28 0x7f10fbff16b3 gst_pad_peer_query STDERR: 29 0x7f10b83ffc86 gst_identity_query STDERR: 30 0x7f10fbfedebb gst_pad_query STDERR: 31 0x7f10fbff16b3 gst_pad_peer_query
Xabier Rodríguez Calvar
Comment 5
2024-11-12 01:33:56 PST
Reopened Bugzilla. REGRESSION(
286428@main
): [GStreamer][MediaStream] ASSERTs due to invalid memory access, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=282974
.
Philippe Normand
Comment 6
2024-11-12 05:59:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36525
EWS
Comment 7
2024-11-12 07:31:57 PST
Committed
286479@main
(a83ef3f05200): <
https://commits.webkit.org/286479@main
> Reviewed commits have been landed. Closing PR #36525 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug