Source/WebCore/platform/mediastream/gstreamer/GStreamerCapturer.h
@@ -66,6 +66,8 @@ public:
     void stop();
     WARN_UNUSED_RETURN GRefPtr<GstCaps> caps();
 
+    std::pair<GstClockTime, GstClockTime> queryLatency();
+
     GstElement* makeElement(const char* factoryName);
     virtual GstElement* createSource();
     GstElement* source() { return m_src.get();  }
